2019-02-17  Gavin Smith  <gavinsmith0123@gmail.com>

	Do not check for some header files.

	* configure.ac (AC_CHECK_HEADERS): Do not check for limits.h,
	string.h, strings.h, sys/file.h, sys/stream.h or sys/ttold.h.
	* system.h: Unconditionally include limits.h.  Never include 
	sys/file.h.
	* info/termdep.h: Do not try to include sys/ttold.h.

2019-02-17  Gavin Smith  <gavinsmith0123@gmail.com>

	Do not check for fcntl.h or sys/fcntl.h.

	* configure.ac (AC_CHECK_HEADERS): Do not check for fcntl.h or 
	sys/fcntl.h.
	* system.h: Include fcntl.h unconditionally.
	
2019-02-17  Gavin Smith  <gavinsmith0123@gmail.com>

	Remove BSD signals support.

	* configure.ac: Do not check for sigblock or sigsetmask.
	* info/signals.c: Do not check HAVE_SIGSETMASK.
	(sigprocmask): Remove this replacement function.

2019-02-17  Gavin Smith  <gavinsmith0123@gmail.com>

	Remove AC_REPLACE_FUNCS.

	* configure.ac: Remove AC_REPLACE_FUNCS.  This has likely been 
	unused since gnulib was integrated into the sources.

2019-02-17  Gavin Smith  <gavinsmith0123@gmail.com>

	Remove 'termio' support.

	* configure.ac: Do not check for termio.h or sys/ptem.h.
	* info/termdep.h, info/terminal.c:
	Remove all code for when termios.h is not present.

2019-02-17  Gavin Smith  <gavinsmith0123@gmail.com>

	Remove obsolete configure checks.

	* configure.ac: Remove AC_HEADER_STAT, AC_HEADER_STDC, 
	AC_TYPE_SIGNAL, AC_C_CONST, AC_STRUCT_TM, AC_FUNC_VPRINTF.  
	Remove commented-out use of AC_FUNC_SETVBUF_REVERSED.

	* info/signals.c, info/terminal.c: Remove use of RETSIGTYPE for 
	signal handlers.

	Some of these are noted in the autoconf or gnulib manuals as 
	being unnecessary.

2019-02-17  Gavin Smith  <gavinsmith0123@gmail.com>

	Remove customization value OUT.

	* tp/Texinfo/Common.pm (@command_line_settables),
	* doc/texinfo.texi (Customization Variables and Options):
	Remove 'OUT'.
	* tp/texi2any.pl: Do not use 'OUT' as a customization variable 